# smart-home-guard1

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  main.py
backend/middleware/: auth.py
backend/models/: enums.py  schemas.py
backend/routers/: analysis.py  health.py  scan.py
backend/services/: feature_service.py  ml_service.py
backend/utils/: pcap_validator.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/dashboard/: AlertFeed.tsx  AlertItem.tsx  FlowTable.tsx  FlowTableRow.tsx  KpiCard.tsx  KpiGrid.tsx  ProtocolBarChart.tsx  TcpFlagRadar.tsx  ThreatTimeline.tsx  TopSourceIps.tsx  TrafficDonut.tsx
frontend/src/components/history/: ScanDetailModal.tsx  ScanHistoryTable.tsx
frontend/src/components/scan/: PcapPanel.tsx  RealtimePanel.tsx  ScanPanel.tsx
frontend/src/hooks/: useAuth.ts  useInterfaces.ts  useRealtimeFlows.ts  useScanHistory.ts  useUploadAnalysis.ts
frontend/src/lib/: constants.ts  supabase.ts
frontend/src/pages/: DashboardPage.tsx  HistoryPage.tsx  SettingsPage.tsx
frontend/src/services/: analysisService.ts  api.ts  supabaseService.ts
frontend/src/store/: alertStore.ts  scanStore.ts  themeStore.ts  uiStore.ts
frontend/src/types/: alert.ts  flow.ts  index.ts  ml.ts  scan.ts
frontend/src/utils/: flowNormalizer.ts  formatters.ts  severityHelpers.ts
notebooks/: exploratory_data_analysis.ipynb  training.ipynb
notebooks/data/ciciot2023_filtered/: MQTT_Labeled1.parquet  SSH_Labeled.parquet
